# flirtlib

./: .gitignore  stack.xml
flirtlib/: Makefile  flirtlib.md5  flirtlib.patch  mainpage.dox  manifest.xml
flirtlib_ros/: CMakeLists.txt  mainpage.dox  manifest.xml
flirtlib_ros/action/: RotateInPlace.action
flirtlib_ros/include/flirtlib_ros/: common.h  conversions.h  flirtlib.h  localization_monitor.h
flirtlib_ros/launch/: flirtlib_ros.launch  generate_scan_map.launch  move_base_local.launch  place_rec_test.launch  ros_test.launch  startup_loc.launch
flirtlib_ros/launch/local_nav/: base_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_local.launch  move_base_params.yaml
flirtlib_ros/msg/: ExecutiveState.msg  InterestPointRos.msg  RefScanRos.msg  ScanMap.msg  Vector.msg
flirtlib_ros/nodes/: localize.py
flirtlib_ros/rviz/: flirtlib-robot.vcg  flirtlib.vcg  startup-loc.vcg
flirtlib_ros/src/: common.cpp  conversions.cpp  flirtlib.cpp  flirtlib_ros_test.cpp  generate_scan_map.cpp  generate_simulated_scans.cpp  interactive_markers.cpp  localization_monitor.cpp  localization_monitor_node.cpp  place_rec_test.cpp  rotate_in_place.cpp  simulate_scans.cpp  startup_loc.cpp
flirtlib_ros/src/flirtlib_ros/: scans.py
wg_flirtlib/: CMakeLists.txt  Makefile  henry.world  henry_house.yaml  henry_stage.launch  mainpage.dox  manifest.xml  willow.md5
wg_flirtlib/launch/: wg_flirtlib.launch
